--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 
 /* Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap');
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400;0,6..96,500;0,6..96,600;0,6..96,700;1,6..96,400;1,6..96,500&family=DM+Sans:ital,opsz,wght@0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;1,9..40,400&display=swap');
 
 @import "tailwindcss";
 
@@ -27,7 +28,7 @@
   --color-border: #E8DDD1;
   --color-success: #7E9181;
   --color-error: #C47D5E;
-  --font-display: "Playfair Display", Georgia, serif;
+  --font-display: "Bodoni Moda", "Bauer Bodoni", Didot, Georgia, serif;
   --font-body: "DM Sans", system-ui, sans-serif;
 }
 
